--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <title>Campus Life</title>
 </head>
 <body>
-    
+    <header id="Banner">
+    <h1 id="banner">Student Life</h1>
+    <p>This is the banner</p>
+    </header>
+    <nav id="navigation">
+        <ul>
+            <li><a href="#StudentOrganization">Student Organizations</a></li>
+            <li><a href="#Events">Upcoming Events</a></li>
+            <li><a href="#News">Campus News</a></li>
+        </ul>
+    </nav>
+    <section id="StudentOrganization"><p>This is the student organization section</p></section>
+    <section id="Events"><p>This is the events section</p></section>
+    <section id="News">This is the news section</section>
 </body>
 </html>
